Slight rework of blob initial condition
- periodic tail effect for blobs is now taken into account for a wider domain (full domain size instead of half)
- "many-blobs" and "blob" condition was merged into one
- reading in the values for blob width and blob position is now available for all blobs in matrix form
- I have implemented backwards compability for those values, that they can also be written as arrays, so that old ini files should hopefully still work
- for this I touched the matrix loading code and implemented this special condition
- why all this? Well i found out that "many-blobs" was only implemented in 2D, this now is in 3D
- subsequently, the 3D tests have been corrected
- the different blob periodicity formulation touched all tests (1e-12 errors), they have been updated as well

--- a/TESTING/conv/blob_adaptive_2D_CDF20/blob-convection.ini
+++ b/TESTING/conv/blob_adaptive_2D_CDF20/blob-convection.ini
@@ -51,17 +51,21 @@ field_names=phi;
 ; how many scalar fields do you want to solve?
 N_scalars=1;
 ; note you need to specify one value per scalar field for ALL the below parameters
-; if nu<1.0e-10 (or 0.0), diffusion is disabled.
+; diffusion constant, if nu<1.0e-10 (or 0.0), diffusion is disabled.
 nu=0.0;
-; initial condition for the scalar(s)
-inicond=many-blobs;
+; reaction constant
+gamma=0.0;
+; initial condition for the scalar(s), currently implemented are:
+; [noise,zero,const,sin,sin+1,cyclogenesis,circle,1D-bump,blob]
+inicond=blob;
+; amount of blobs for "blob"
 Nblobs=3;
-blobs_width=0.001 0.001 0.01;
-; blobs_width=0.01 0.001 0.0001;
-blobs_x0=0.2 0.6 0.8;
-blobs_y0=0.8 0.6 0.2;
-blobs_z0=0.2 0.4 0.8;
-; velocity field for transportation, [swirl,constant]
+; settings for blob width and position - matrices with one line per scalar and one entry in each line per Nblobs
+blob_width=(/0.001 0.001 0.01/);
+x0=(/0.2 0.6 0.8/);
+y0=(/0.8 0.6 0.2/);
+z0=(/0.2 0.4 0.8/);
+; velocity field for transportation, [nonlinear,cyclogenesis,swirl,constant,circular,vortex-pair,swirl-helix]
 velocity=constant;
 ; if constant velocity, these are the values
 u0x=1.0;
