--- a/TESTING/conv/blob_equi_3D_CDF40/blob-convection.ini
+++ b/TESTING/conv/blob_equi_3D_CDF40/blob-convection.ini
@@ -100,26 +100,30 @@ C_sponge=1.0e-2;
 
 
 [ConvectionDiffusion]
-; how many scalar fields do you want to solve? should be the same as number_equations
-; above.
+; how many scalar fields do you want to solve?
 N_scalars=1;
 ; note you need to specify one value per scalar field for ALL the below parameters
-; viscosity. if nu<1.0e-10 (or 0.0), diffusion is disabled.
-nu=0.0e-6;
-; initial condition for the scalar(s)
-inicond=many-blobs;
+; diffusion constant, if nu<1.0e-10 (or 0.0), diffusion is disabled.
+nu=0.0;
+; reaction constant
+gamma=0.0;
+; initial condition for the scalar(s), currently implemented are:
+; [noise,zero,const,sin,sin+1,cyclogenesis,circle,1D-bump,blob]
+inicond=blob;
+; amount of blobs for "blob"
 Nblobs=3;
-blobs_width=0.02 0.01 0.05;
-blobs_x0=0.2 0.6 0.8;
-blobs_y0=0.8 0.6 0.2;
-blobs_z0=0.2 0.4 0.8;
-; velocity field for transportation, [swirl,constant]
+; settings for blob width and position - matrices with one line per scalar and one entry in each line per Nblobs
+blob_width=(/0.02 0.01 0.05/);
+x0=(/0.2 0.6 0.8/);
+y0=(/0.8 0.6 0.2/);
+z0=(/0.2 0.4 0.7/);
+; velocity field for transportation, [nonlinear,cyclogenesis,swirl,constant,circular,vortex-pair,swirl-helix]
 velocity=constant;
 ; if the velocity profile is the swirl test, one sometimes would want to compute
 ; an incomplete swirl, i.e. Tmax and Tswirl to not agree. Set T_swirl here if you want
 ; the default is the same as the simulation duration
 T_swirl=5.0;
-; if constant velocity, these are the values (one per scalar)
+; if constant velocity, these are the values
 u0x=1.0;
 u0y=1.0;
 u0z=1.0;
