--- a/PARAMS_template_ACM.ini
+++ b/PARAMS_template_ACM.ini
@@ -93,8 +93,11 @@ inicond_refinements=0;
 ; sfc_hilbert -> hilbert space filling curve
 block_dist=sfc_hilbert;
 ; refinement indicator to be used in mesh refinement [everywhere, significant]
-; everywhere: refine every single block, a long proven tactic
-; significant: do not refine blocks which are not deemed significant, this can save many blocks but is still experimental
+; everywhere: refine every single block, a long proven strategy. Corresponds to what is used in Engels et al 2021 CiCP, which
+;             is a conservative implementation of Liandrat's safety zone.
+; significant: do not refine blocks which are not significant, this can save many blocks but is still experimental. It relies
+;              on the coarsening (adapt_mesh) for figuring out which blocks are significant. Hence, only blocks with signficant
+;              wavelet coeffs are refined, however, he grid still has to be graded which in turn adds some blocks again.
 refinement_indicator=everywhere;
 ; coarsening indicator to be used in mesh adaptation (=coarsening) [threshold-state-vector, random, primary-variables]
 ; threshold-state-vector: evaluates wavelet criterion on components of state vector. specify below which ones.
