--- a/PARAMS_template.ini
+++ b/PARAMS_template.ini
@@ -84,8 +84,11 @@ inicond_refinements=0;
 ; sfc_hilbert -> hilbert space filling curve
 block_dist=sfc_hilbert;
 ; refinement indicator to be used in mesh refinement [everywhere, significant]
-; everywhere: refine every single block, a long proven tactic
-; significant: do not refine blocks which are not deemed significant, this can save many blocks but is still experimental
+; everywhere: refine every single block, a long proven strategy. Corresponds to what is used in Engels et al 2021 CiCP, which
+;             is a conservative implementation of Liandrat's safety zone.
+; significant: do not refine blocks which are not significant, this can save many blocks but is still experimental. It relies
+;              on the coarsening (adapt_mesh) for figuring out which blocks are significant. Hence, only blocks with signficant
+;              wavelet coeffs are refined, however, he grid still has to be graded which in turn adds some blocks again.
 refinement_indicator=everywhere;
 ; coarsening indicator to be used in mesh adaptation (=coarsening) [threshold-state-vector, random, primary-variables]
 ; threshold-state-vector: evaluates wavelet criterion on components of state vector. specify below which ones.
@@ -114,7 +117,10 @@ eps_norm=Linfty;
 eps=1e-3;
 ; which components to use for coarsening_indicator? default is all components individually (set to 1).
 ; active only if coarsening_indicator=threshold-state-vector. select the components, set as
-; many as number_equations, values>1 are each treated together with a norm-equivalent
+; many as number_equations. values>1 are each treated together with a norm-equivalent.
+; For example, in 3D ACM, this could be 1,1,1,1 to threshold all components individually or
+; 2,2,2,1 to threshold the velocity as a vector and the pressure as a scalar, or 1,0,0,1 to base adaptation 
+; on ux and p only (never used, just an example).
 threshold_state_vector_component=1 1 0;
 ; it can be useful to also use the mask function (if penalization is used) for grid adaptation.
 ; i.e. the grid is always at the finest level on mask interfaces. Careful though: the Penalization
