--- a/PARAMS_template_ACM.ini
+++ b/PARAMS_template_ACM.ini
@@ -117,7 +117,10 @@ coarsening_indicator_inicond=;
 eps_normalized=1;
 ; which components to use for coarsening_indicator? default is all components individually (set to 1).
 ; active only if coarsening_indicator=threshold-state-vector. select the components, set as
-; many as number_equations, values>1 are each treated together with a norm-equivalent
+; many as number_equations, values>1 are each treated together with a norm-equivalent.
+; For example, in 3D ACM, this could be 1,1,1,1 to threshold all components individually or
+; 2,2,2,1 to threshold the velocity as a vector and the pressure as a scalar, or 1,0,0,1 to base adaptation 
+; on ux and p only (never used, just an example).
 threshold_state_vector_component=1 1 1 1;
 ; it can be useful to also use the mask function (if penalization is used) for grid adaptation.
 ; i.e. the grid is always at the finest level on mask interfaces. Careful though: the Penalization
