soft startup penalization, dissipation rate from stress tensor (not vorticity)

--- a/PARAMS_template_ACM.ini
+++ b/PARAMS_template_ACM.ini
@@ -406,6 +406,14 @@ file_usx=
 file_usy=
 file_usp=
 smoothing_type=hester; hester, discontinuous/dis, cos
+; EXPERIMENTAL:
+; Soft penalization: gently turn on penalization at the beginning (t=0) of a simulation. This makes the initial wave 
+; travelling through the domain smoother. Its thickness is usually C_eta*C_0 (dimension L). Slowly decreasing C_eta from C_eta_start=1.0
+; to its final value (small, say C_eta=1e-4) thus drastically increases the shock width. The shock intensity decays as R^-1 (2D) or 
+; R^-2 (3D), but even in 3D it can still require resolution of the shock wave that can be expensive.
+soft_penalization_startup=no;
+C_eta_start=1.0;
+penalization_startup_tau=0.05;
 
 [Insects]
 ; NOTE: Those parameters are used only in ACM and only if VPM::geometry=Insect
