Reduced minimum g & many minor points
- some work on CVS routines
- random grid is forced to not be equidistant on JMin
- symmetric BC works in 3D now (bugfix)
- 3D vorticity, vor-abs and divergence saving during simulation
- post-processing tool for derivatives
- Wavelet reconstruction can be split for only SC or only WC
- Minimum g for lifted wavelets reduced by 1 with a trick

--- a/TESTING/insects/dry_dipteraBodyRotation_CDF22/PARAMS_dry_run.ini
+++ b/TESTING/insects/dry_dipteraBodyRotation_CDF22/PARAMS_dry_run.ini
@@ -45,7 +45,7 @@ number_block_nodes=8;
 number_ghost_nodes=;
 ; For the right hand side, often less ghost nodes are required than for the wavelet, specify here.
 ; For a 4th order FD code, this is 2 (FD4) or 3 (TW4). 2nd order is 1. Default=number_ghost_nodes
-number_ghost_nodes_rhs=3;
+number_ghost_nodes_rhs=;
 ; number of equations / components of state vector. Note you have to properly
 ; adjust this value for the physics module that you use.
 ; ACM: 3 (2D), 4 (3D) +  nscalars
@@ -297,7 +297,7 @@ N_scalars=0;
 
 [Discretization]
 ; order of derivatives [ FD_2nd_central, FD_4th_central, FD_6th_central, FD_4th_central_optimized ]
-order_discretization=FD_6th_central;
+order_discretization=FD_2nd_central;
 ; explicit filtering of state vector, after time evolution (and before coarsening).
 ; available filters: [explicit_3pt, explicit_5pt, explicit_7pt, explicit_9pt, explicit_11pt]
 filter_type=;
