--- a/TESTING/insects/dry_emundus_4wings_CDF22/PARAMS_dry_run.ini
+++ b/TESTING/insects/dry_emundus_4wings_CDF22/PARAMS_dry_run.ini
@@ -32,7 +32,7 @@ number_block_nodes=8;
 number_ghost_nodes=;
 ; For the right hand side, often less ghost nodes are required than for the wavelet, specify here.
 ; For a 4th order FD code, this is 2 (FD4) or 3 (TW4). 2nd order is 1. Default=number_ghost_nodes
-number_ghost_nodes_rhs=2;
+number_ghost_nodes_rhs=;
 ; number of equations / components of state vector. Note you have to properly
 ; adjust this value for the physics module that you use.
 ; ACM: 3 (2D), 4 (3D) +  nscalars
@@ -249,7 +249,7 @@ C_sponge=3.000000e-03;
 
 [Discretization]
 ; order of derivatives [ FD_2nd_central | FD_4th_central_optimized ]
-order_discretization=FD_4th_central;
+order_discretization=FD_2nd_central;
 filter_type=no_filter;
 
 
