ACM: set correct defaults for CFL-nu (old estimate was too conservative)

--- a/PARAMS_template_ACM.ini
+++ b/PARAMS_template_ACM.ini
@@ -168,12 +168,17 @@ nt=;
 ; the heat eqn, which is not implemented) may not even have a CFL restriction.
 CFL=1.0;
 ; CFL critierum for penalization (dt<=CFL_eta*C_eta), if VPM is used. For RungeKuttaGeneric schemes, the constant
-; has to be < 1.0 (otherwise the code is unstable). For krylov schemes, it can be greater
-; 1, but be careful about the error. This parameter is used by ACM physics module only.
+; has to be < 1.0 (otherwise the code is unstable). If you use RKC schemes,
+; set this to a large value. This parameter is used by ACM physics module only.
 CFL_eta=0.99;
 ; time step restriction of viscous terms ( dt < CFL_NU * dx**2 / nu )
-; runge kutta 4 has constraints: 2D=>0.14 3D=>0.094 (exact expression: 2.79/(dim*pi**2)), these are
-; the default values
+; The RK4 scheme (the default!) can integrate operators with real eigenvalues up to -2.79*dt (we add a small safety
+; margin 0.95). The smallest eigenvalue from the diffusion term is -4/dx**2 for the FD2, -5.333/dx**2 for FD4 and -6.044/dx**2
+; for the FD6. The eigenvalue of the 2D/3D operator is then dim*Y/dx**2, with Y={4,5.333,6.044}. The default value for
+; CFL_nu is therefore 0.95*2.79 / (Y*dim).
+; (see nice article. https://en.wikipedia.org/wiki/Kronecker_sum_of_discrete_Laplacians)
+; Note this condition is relevant for low Re only - at high Re, other terms dominate the time step. If you use RKC schemes,
+; set this to a large value.
 CFL_nu=;
 ; wabbit can save the heavy data (flow fiels) to HDF5. What is saved depends on the physics modules
 ; and the section [Saving]. Here you control WHEN you want to save the output: either after a fixed
