ACM: add skew-symmetric discretization // WABBIT: minor fixes

--- a/PARAMS_template.ini
+++ b/PARAMS_template.ini
@@ -293,6 +293,11 @@ use_passive_scalar=0;
 compute_flow=1;
 ;
 use_HIT_linear_forcing=1;
+; use skew-symmetric discretization or not? Default=false at the moment. Note if it equals false, you should
+; probably use force_maxlevel_dealiasing=1 depending on resolution and viscosity - otherwise the simulation
+; becomes unstable. With the skew_symmetry=1, the solution is stable even if nu=0.0 (inviscid case), and you
+; do not need to set force_maxlevel_dealiasing=1 (and you really shouldn't)
+skew_symmetry=1;
 
 
 [Sponge]
