ACM: add lamballais local variation case

--- a/PARAMS_template_ACM.ini
+++ b/PARAMS_template_ACM.ini
@@ -434,6 +434,8 @@ smoothing_type=hester; hester, discontinuous/dis, cos
 soft_penalization_startup=no;
 C_eta_start=1.0;
 penalization_startup_tau=0.05;
+; default for C_eta_ring is C_eta, leave empty for global variation of Lamballais-test case
+C_eta_ring=;
 
 [Insects]
 ; NOTE: Those parameters are used only in ACM and only if VPM::geometry=Insect
