--- a/PARAMS_template_ACM.ini
+++ b/PARAMS_template_ACM.ini
@@ -519,6 +519,9 @@ fractal_tree_file=tree_data.in;
 fractal_tree_x0=0.0, 0.0, 0.0;
 ; we can scale the whole tree up as well:
 fractal_tree_scaling=1.0;
+; fractal tree cylinders can have endpoint spheres (default) or be sharply cut, finite cylinder
+; like in [Yin, Onishi, Watanabe et al, JFM2025].
+fractal_tree_spheres=1;
 ;-------------------------------------------------------------------------------
 ; Parameters that control the smoothing of the mask function
 ; Discovered that this was done block based, i.e. the smoothing layer
