--- a/PARAMS_template_ACM.ini
+++ b/PARAMS_template_ACM.ini
@@ -304,7 +304,15 @@ use_HIT_linear_forcing=0;
 ; becomes unstable. With the skew_symmetry=1, the solution is stable even if nu=0.0 (inviscid case), and you
 ; do not need to set force_maxlevel_dealiasing=1 (and you really shouldn't)
 skew_symmetry=1;
-
+; ACM Model for the pressure eqn: 
+; "acm": [Chorin1967]  (default, usual eqn as used in [Engels CICP 2021]) 
+; "diffusive": [Clausen2013, Dupuy2020] (pressure diffusion with same nu as usual viscosity)
+; "convective": [Clausen2013, Dupuy2020] 
+; "EDAC": [Clausen2013, Dupuy2020] (Is the sum of "diffusive" and "convective")
+; "bulk_viscosity" : [Yasuda2023, AbdulGafoor2024] 
+p_eqn_model=;
+; bulk viscosity
+bulk_viscosity=0.0;
 
 [Sponge]
 ; sponge term, used in ACM module to mimick outflow conditions for pressure waves
