--- a/PARAMS_template_ACM.ini
+++ b/PARAMS_template_ACM.ini
@@ -310,9 +310,11 @@ skew_symmetry=1;
 ; "convective": [Clausen2013, Dupuy2020] 
 ; "EDAC": [Clausen2013, Dupuy2020] (Is the sum of "diffusive" and "convective")
 ; "bulk_viscosity" : [Yasuda2023, AbdulGafoor2024] 
+; ATTENTION The additional ACM terms are still experimental and available ONLY with the FORTH order code
 p_eqn_model=;
 ; bulk viscosity
-bulk_viscosity=0.0;
+nu_bulk=0.0;
+
 
 [Sponge]
 ; sponge term, used in ACM module to mimick outflow conditions for pressure waves
