--- a/PARAMS_template.ini
+++ b/PARAMS_template.ini
@@ -282,7 +282,8 @@ gamma_p=1;
 u_mean_set=0.0 0.0 0.0;
 ; initial condition
 inicond=meanflow;
-; if inicond= pressure-blob
+; if inicond= pressure-blob, this is the size of the blob.
+; if inicond=noise, this is the upper value for the noise (beta*rand(0..1))
 beta=0.05;
 ; we can use passive scalars with the ACM. their parameters are specified in "ConvectionDiffusion" below
 ; but they need to be turned on here. Default is off.
@@ -292,13 +293,22 @@ use_passive_scalar=0;
 ; penalized passive scalar eqns.
 compute_flow=1;
 ;
-use_HIT_linear_forcing=1;
+use_HIT_linear_forcing=0;
 ; use skew-symmetric discretization or not? Default=false at the moment. Note if it equals false, you should
 ; probably use force_maxlevel_dealiasing=1 depending on resolution and viscosity - otherwise the simulation
 ; becomes unstable. With the skew_symmetry=1, the solution is stable even if nu=0.0 (inviscid case), and you
 ; do not need to set force_maxlevel_dealiasing=1 (and you really shouldn't)
 skew_symmetry=1;
-
+; ACM Model for the pressure eqn: 
+; "acm": [Chorin1967]  (default, usual eqn as used in [Engels CICP 2021]) 
+; "diffusive": [Clausen2013, Dupuy2020] (pressure diffusion with same nu as usual viscosity)
+; "convective": [Clausen2013, Dupuy2020] 
+; "EDAC": [Clausen2013, Dupuy2020] (Is the sum of "diffusive" and "convective")
+; "bulk_viscosity" : [Yasuda2023, AbdulGafoor2024] 
+; ATTENTION The additional ACM terms are still experimental and available ONLY with the FORTH order code
+p_eqn_model=;
+; bulk viscosity
+nu_bulk=0.0;
 
 [Sponge]
 ; sponge term, used in ACM module to mimick outflow conditions for pressure waves
