Saving logic for ConvDiff physics module
- now we can set names for ConvDiff and save the scalars individually, similar to how it is done in ACM
- new center_expand IC, used for validation of averaging

--- a/TESTING/conv/blob_adaptive_2D_CDF22/blob-convection.ini
+++ b/TESTING/conv/blob_adaptive_2D_CDF22/blob-convection.ini
@@ -44,7 +44,7 @@ wavelet=CDF22;
 ; how many fields are you going to save?
 N_fields_saved=1;
 ; how are the fields labeled?
-field_names=phi;
+field_names=phi1;
 
 
 [ConvectionDiffusion]
