--- a/TESTING/conv/blob_equi_3D_CDF20/blob-convection.ini
+++ b/TESTING/conv/blob_equi_3D_CDF20/blob-convection.ini
@@ -61,7 +61,7 @@ wavelet=CDF20;
 ; how many fields are you going to save?
 N_fields_saved=1;
 ; how are the fields labeled?
-field_names=phi; ux uy uz;
+field_names=phi1; ux uy uz;
 
 
 [Statistics]
