--- a/TESTING/conv/blob_adaptive_3D_CDF40/blob-convection.ini
+++ b/TESTING/conv/blob_adaptive_3D_CDF40/blob-convection.ini
@@ -63,7 +63,7 @@ threshold_state_vector_component=1;
 ; how many fields are you going to save?
 N_fields_saved=1;
 ; how are the fields labeled?
-field_names=phi; ux uy uz;
+field_names=phi1; ux uy uz;
 
 
 [Statistics]
