Better naming for timestatistics
- now the naming for timestatistics for saving is how you set it in the time statistics field
- changed the ini templates to reflect some changes
- convdiff naming is now consistent with the scalar number
- added a test for the averaging

--- a/PARAMS_template.ini
+++ b/PARAMS_template.ini
@@ -49,8 +49,10 @@ number_ghost_nodes_rhs=;
 ; number of equations / components of state vector. Note you have to properly
 ; adjust this value for the physics module that you use.
 ; ACM: 3 (2D), 4 (3D)
-; Convection: 1 (2D /3D)
+; Convection: nscalars (2D /3D)
 number_equations=4;
+; how many of the equations are used in the rhs evaluation? default=number_equations, can be reduced when using timestatistics
+number_equations_rhs=;
 ; treelevel bounds: determine the highest (max_treelevel) and lowest (min_treelevel) refinement
 ; level of blocks. With each refinement level the grid gets refined by a factor of two. The maximum
 ; resolution at max_treelevel is dx = 2^-max_treelevel * L / Bs (L:domain size, Bs: blocksize)
@@ -267,6 +269,19 @@ nsave_stats=10;
 tsave_stats=0.20;
 
 
+[Time-Statistics]
+; do averaging or operations of some specific quantities over time
+time_statistics=0;
+; how many of those quantities? Increase number_eqn and adapt threshold_state_vector_component, optionally: set number_eqn_rhs
+N_time_statistics=1;
+; which quantities to take and what operation to do [QTY-OP]?
+; quantities are:
+;    phiX for convdiff
+;    ux,uy,uz,p,umag,divu,vort,vorabs,dissipation, u[xyz]d[xyz], u[xyz]d[xyz]2, u[xyz]2
+; operators are int, avg/mean, var, minmax, var needs to be followed by avg/mean of the same quantity
+time_statistics_names=phi1-avg;
+
+
 [ACM-new]
 ; speed of sound, used also for the CFL condition. The characteristic velocity is
 ; u_eigen = umax + sqrt(umax**2 + c0**2)
@@ -341,11 +356,13 @@ N_scalars=1;
 nu=0.0;
 ; initial condition for the scalar(s)
 inicond=blob;
-blob_width=0.01;
-; position of blob
-x0=0.5;
-y0=0.75;
-z0=0;
+; amount of blobs for "blob"
+Nblobs=1;
+; settings for blob width and position - matrices with one line per scalar and one entry in each line per Nblobs
+blob_width=(/0.01/);
+x0=(/0.8/);
+y0=(/0.2/);
+z0=(/0.0/);
 ; velocity field for transportation, [swirl,constant,nonlinear]
 velocity=swirl;
 ; if the velocity profile is the swirl test, one sometimes would want to compute
@@ -703,3 +720,4 @@ shock_front_normal=2;
 test_ghost_nodes_synch=1;
 test_wavelet_decomposition=0;
 test_treecode=0;
+flush_frequency=;
