--- a/PARAMS_template_ACM.ini
+++ b/PARAMS_template_ACM.ini
@@ -50,8 +50,10 @@ number_ghost_nodes_rhs=;
 ; number of equations / components of state vector. Note you have to properly
 ; adjust this value for the physics module that you use.
 ; ACM: 3 (2D), 4 (3D) +  nscalars
-; Convection: 1 (2D /3D)
+; Convection: nscalars (2D /3D)
 number_equations=3;
+; how many of the equations are used in the rhs evaluation? default=number_equations, can be reduced when using timestatistics
+number_equations_rhs=;
 ; threshold value for thresholding wavelet coefficients
 eps=1e-3;
 ; WABBIT uses interpolating, biorthogonal wavelets. These wavelets are, by default, normalized in the Linfty
@@ -270,6 +272,19 @@ field_names=ux uy uz p mask scalar1;
 nsave_stats=10;
 ; and every tsave physical time units (leave empty to disable)
 tsave_stats=0.20;
+
+
+[Time-Statistics]
+; do averaging or operations of some specific quantities over time
+time_statistics=0;
+; how many of those quantities? Increase number_eqn and adapt threshold_state_vector_component, optionally: set number_eqn_rhs
+N_time_statistics=1;
+; which quantities to take and what operation to do [QTY-OP]?
+; quantities are:
+;    phiX for convdiff
+;    ux,uy,uz,p,umag,divu,vort,vorabs,dissipation, u[xyz]d[xyz], u[xyz]d[xyz]2, u[xyz]2
+; operators are int, avg/mean, var, minmax, var needs to be followed by avg/mean of the same quantity
+time_statistics_names=ux-avg;
 
 
 [ACM-new]
@@ -568,3 +583,4 @@ use_free_flight_solver=0;
 test_ghost_nodes_synch=1;
 test_treecode=0;
 test_wavelet_decomposition=0;
+flush_frequency=;
