--- a/PARAMS_template_ACM.ini
+++ b/PARAMS_template_ACM.ini
@@ -49,7 +49,7 @@ number_ghost_nodes=;
 number_ghost_nodes_rhs=;
 ; number of equations / components of state vector. Note you have to properly
 ; adjust this value for the physics module that you use.
-; ACM: 3 (2D), 4 (3D) +  nscalars
+; ACM: 3 (2D), 4 (3D) +  nscalars + nTimeStatistics
 ; Convection: nscalars (2D /3D)
 number_equations=3;
 ; how many of the equations are used in the rhs evaluation? default=number_equations, can be reduced when using timestatistics
