More time statistics option
- read in old time statistics values
- set how many time has passed for weighting the statistics correcltly
- start time statistics in the future - yes!

--- a/PARAMS_template.ini
+++ b/PARAMS_template.ini
@@ -280,6 +280,13 @@ N_time_statistics=1;
 ;    ux,uy,uz,p,umag,divu,vort,vorabs,dissipation, u[xyz]d[xyz], u[xyz]d[xyz]2, u[xyz]2
 ; operators are int, avg/mean, var, minmax, var needs to be followed by avg/mean of the same quantity
 time_statistics_names=phi1-avg;
+; sometimes we want to restart simulations. In this case we want to read in the time_statistics
+; if this is set to 1, Physics::input_files has to include the time_statistics files as well
+read_from_files_time_statistics=0;
+; set a start time from when averaging is done.
+; If it is before the read-in time, then it is for weighting the read-in values.
+; If it is after the read-in time or 0.0, then the time_statistics accumulation start at that time.
+time_statistics_start_time=1.0;
 
 
 [ACM-new]
