Reduced program size by 60%
- reduced program size by 60% by changing stack allocations to heap allocations in module_insect
- moved multigrid_vcycle to poisson module

--- a/PARAMS_template_ACM.ini
+++ b/PARAMS_template_ACM.ini
@@ -416,7 +416,7 @@ filter_freq=10;
 ; flag for penalization (0/1)
 penalization=1;
 ; WABBIT needs to know about the mask function (if penalization is used): does it contain
-; a time-dependent-part (e.g. moving obstacles, time-dependent forcing)? does it contain
+; a time-dependent-part (e.g. moving obstacles, time-dependent forcing, SPONGE)? does it contain
 ; a time-independent part (fixed walls, homogeneous forcing)? or both? WABBIT needs to know
 ; that since we try to create the time-independent mask function only once, but the time-dependent
 ; part of course in every time step.
