Covariance and more flexible timestatistic placement
- compute covariance for velocity or velocity-pressure, needs to be followed by both mean values at some point
- before, you had to strictly place the mean computation after the variance computation, now you can place it anywhere, as long as it is behind the variable

--- a/PARAMS_template_ACM.ini
+++ b/PARAMS_template_ACM.ini
@@ -283,7 +283,10 @@ N_time_statistics=1;
 ; quantities are:
 ;    phiX for convdiff
 ;    ux,uy,uz,p,umag,divu,vort,vorabs,dissipation, u[xyz]d[xyz], u[xyz]d[xyz]2, u[xyz]2
-; operators are int, avg/mean, var, minmax, var needs to be followed by avg/mean of the same quantity
+; operators are int, avg/mean, var, minmax, var needs to be followed by avg/mean of the same quantity at any point
+; we can also compute covariances: uxuv-cov, uxuz-cov, uyuz-cov, uxp-cov, uyp-cov, uzp-cov
+; covariances need to be followed by the avg/mean of the two quantities involved and any point
+; example for var / cov: ux-var uy-var uxuy-cov p-avg ux-avg uy-avg, avg just needs to be there somewhere behind the variance/covariance
 time_statistics_names=ux-avg;
 ; sometimes we want to restart simulations. In this case we want to read in the time_statistics
 ; if this is set to 1, Physics::input_files has to include the time_statistics files as well
