Optimized wavelet decomposition and reconstruction, flexible wavelet definitions
- Default cases for ACM and convdiff with flexible operators
- L-R-Skew symmetry for ACM, but it doesn't work for composite stencils
- optimized wavelet decomposition and reconstruction, hardcoded stencils for common wavelets
- memory safety percentage can be set by user
- params uses module operator for filter widths to debug filter width
- for unlifted wavelets, sync stages 1 and 2 are merged, as 2 does not depend on 1 (decomposition filter is only downpass)
- vorticity_post has more operators (but tbh we could just use the actual name here)
- unit testing has variable wavelet definitions to set minimum block size
- swapped L-R filters in pressure-poisson-solver for skew-symmetry to be consistent with ACM
- updated ghostSync test
- some 8th order tests
- all `adapt_mesh` -> `adapt_tree`
- reduced work array for some functions (family sync and blockfiltervct)
- all wavelet filters for CDFXY with X<=Y now are dynamically created. This means that there are way less tables and that we could do wavelets with up to X=Y=12

--- a/PARAMS_template.ini
+++ b/PARAMS_template.ini
@@ -89,7 +89,7 @@ block_dist=sfc_hilbert;
 ; everywhere: refine every single block, a long proven strategy. Corresponds to what is used in Engels et al 2021 CiCP, which
 ;             is a conservative implementation of Liandrat's safety zone.
 ; significant: do not refine blocks which are not significant, this can save many blocks but is still experimental. It relies
-;              on the coarsening (adapt_mesh) for figuring out which blocks are significant. Hence, only blocks with signficant
+;              on the coarsening (adapt_tree) for figuring out which blocks are significant. Hence, only blocks with signficant
 ;              wavelet coeffs are refined, however, he grid still has to be graded which in turn adds some blocks again.
 refinement_indicator=everywhere;
 ; coarsening indicator to be used in mesh adaptation (=coarsening) [threshold-state-vector, random, primary-variables]
