--- a/TESTING/conv/blob_equi_3D_CDF20/blob-convection.ini
+++ b/TESTING/conv/blob_equi_3D_CDF20/blob-convection.ini
@@ -24,9 +24,9 @@ eps_normalized=1;
 max_treelevel=2;
 min_treelevel=2;
 ; switch for mesh adaption, 1=on, ...=off
-adapt_mesh=0;
+adapt_tree=0;
 ; adaptive initial conditon? i.e. create grid to respect error bounds
-; default is same value as adapt_mesh
+; default is same value as adapt_tree
 adapt_inicond=0;
 ; in some situations, it is necessary to create the intial grid, and then refine it for a couple of times.
 ; for example if one does non-adaptive non-equidistant spatial convergence tests. default is 0.
