--- a/TESTING/conv/blob_equi_avg_2D_CDF40/blob-convection.ini
+++ b/TESTING/conv/blob_equi_avg_2D_CDF40/blob-convection.ini
@@ -24,7 +24,7 @@ eps_normalized=1;
 max_treelevel=4;
 min_treelevel=4;
 ; switch for mesh adaption, 1=on, ...=off
-adapt_mesh=1;
+adapt_tree=1;
 ; block distribution for balancing (also used for start distribution)
 ; [equal | sfc_z | sfc_hilbert]
 ; equal -> simple uniformly distribution
