--- a/TESTING/acm/acm_norm_CDF44/acm_cyl.ini
+++ b/TESTING/acm/acm_norm_CDF44/acm_cyl.ini
@@ -47,12 +47,12 @@ min_treelevel=;
 ; only is important for postprocessing, i.e. using the adaptive-POD module. For running
 ; simulations, you can leave the value empty - it is set automatically.
 max_forest_size=;
-; Use adaptivity or not? If adapt_mesh=1 then the grid is refined before a time step,
-; the time evolution is done, and the grid is coarsened after the time step. If adapt_mesh=0
+; Use adaptivity or not? If adapt_tree=1 then the grid is refined before a time step,
+; the time evolution is done, and the grid is coarsened after the time step. If adapt_tree=0
 ; the grid does not change after the initial condition, and refinement/coarsening are disabled.
-adapt_mesh=1;
+adapt_tree=1;
 ; adaptive initial conditon? i.e. create grid to respect error bounds
-; default is same value as adapt_mesh
+; default is same value as adapt_tree
 adapt_inicond=1;
 ; in some situations, it is necessary to create the intial grid, and then refine it for a couple of times.
 ; for example if one does non-adaptive non-equidistant spatial convergence tests. default is 0.
