--- a/TESTING/conv/blob_adaptive_2D_CDF40/blob-convection.ini
+++ b/TESTING/conv/blob_adaptive_2D_CDF40/blob-convection.ini
@@ -23,7 +23,7 @@ eps_normalized=1;
 max_treelevel=8;
 min_treelevel=1;
 ; switch for mesh adaption, 1=on, ...=off
-adapt_mesh=1;
+adapt_tree=1;
 ; block distribution for balancing (also used for start distribution)
 ; [equal | sfc_z | sfc_hilbert]
 ; equal -> simple uniformly distribution
