--- a/TESTING/conv/blob_adaptive_3D_CDF44/blob-convection.ini
+++ b/TESTING/conv/blob_adaptive_3D_CDF44/blob-convection.ini
@@ -27,9 +27,9 @@ eps=1e-3;
 max_treelevel=5;
 min_treelevel=1;
 ; switch for mesh adaption, 1=on, ...=off
-adapt_mesh=1;
+adapt_tree=1;
 ; adaptive initial conditon? i.e. create grid to respect error bounds
-; default is same value as adapt_mesh
+; default is same value as adapt_tree
 adapt_inicond=1;
 ; in some situations, it is necessary to create the intial grid, and then refine it for a couple of times.
 ; for example if one does non-adaptive non-equidistant spatial convergence tests. default is 0.
