New filter options
- this concerns the post-filters and not the wavelet filters
- we can now filter only maxlevel or all but the maxlevel blocks
- we can now also filter individual components

--- a/PARAMS_template.ini
+++ b/PARAMS_template.ini
@@ -478,11 +478,16 @@ initial_density=1.645;      rho_0
 ; order of derivatives [ FD_2nd_central, FD_4th_central, FD_6th_central, FD_4th_central_optimized ]
 order_discretization=FD_4th_central;
 ; explicit filtering of state vector, after time evolution (and before coarsening).
-; available filters: explicit_3pt, explicit_5pt, explicit_7pt, explicit_9pt, explicit_11pt
+; available filters: explicit_Xpt with X=3,5,7,...,21
 filter_type=;
 ; filter frequency (note: set filter to no_filter if you want to disable filtering completely)
 ; Note our clumsy nomenclature: we mean filtering every "filter_freq" time steps
 filter_freq=10;
+; we can apply the filter only to parts of the grid:
+filter_only_maxlevel=0;
+filter_all_except_maxlevel=0;
+; we can filter only specific components of the state vector:
+filter_component=1;
 
 
 [VPM]
