* update kinematics loader (major rewrite) now loads nonperiodic kinematics for body and up to 4 wings from the file usng hermite interpol * dry-run has tstart parameter (useful if we're interupted) * disabled insect periodization (does not work with STL files) * improve bounding boxes for cylinders * commenting and doc

--- a/PARAMS_template_ACM.ini
+++ b/PARAMS_template_ACM.ini
@@ -287,8 +287,9 @@ gamma_p=1;
 u_mean_set=0.0 0.0 0.0;
 ; initial condition
 inicond=meanflow;
-; if inicond= pressure-blob, this is the size of the blob.
+; if inicond=pressure-blob, this is the size of the blob.
 ; if inicond=noise, this is the upper value for the noise (beta*rand(0..1))
+; if inicond=jet-x-sin-smooth, this is the smoothing layer thickness (in % of the domain height)
 beta=0.05;
 ; we can use passive scalars with the ACM. their parameters are specified in "ConvectionDiffusion" below
 ; but they need to be turned on here. Default is off.
@@ -499,7 +500,12 @@ Jxy=0.0061;
 ;-------------------------------------------------------------------------------
 ; Body motion
 ; motion of the body: (tethered, free_flight, yawpitchroll_param)
+; kinematics_loader: hermite interpolation for non-periodic kinematics 
+; (read from infile_kineloader, describes all wings and the body, trajectory starts at x0 (set below))
 BodyMotion=tethered;
+; Datafile for kinematics_loader: contains all angles and positions in columns, including
+; their time derivatives. No need for separate files for wing and body
+infile_kineloader=input.kineloader;
 x0=2 2 2; initial (or tethered) position
 v0=0 0 0; inital velocity
 yawpitchroll_0=45.0 -45.0 0.0; initial (or tethered, or time-average) orientation in degrees
@@ -509,8 +515,10 @@ eta0=-45.00; stroke plane angle in degrees
 DoF=000000; x,y,z,yaw,pitch,roll DoF on=1 or off=0
 ;-------------------------------------------------------------------------------
 ; Wing motion
-; (types: Drosophila_hovering_fry, Drosophila_hovering_maeda, flapper_sane,
-; flapper_dickinson, takeoff, simplified, from_file, none)
+; [types: Drosophila_hovering_fry, Drosophila_hovering_maeda, flapper_sane,
+; flapper_dickinson, takeoff, simplified, from_file::file.ini, none, kinematics_loader]
+; kinematics_loader: reads "infile_kineloader" (above, one file for up to four wings and body motion)
+; from_file::file.ini: reads periodic kinematics from INI file)
 FlappingMotion_right=suzuki;
 FlappingMotion_left=suzuki;
 ; if flappingmotion=="from_file", which file to use?
