--- a/TESTING/insects/dry_dipteraBodyRotation_CDF22/PARAMS_dry_run.ini
+++ b/TESTING/insects/dry_dipteraBodyRotation_CDF22/PARAMS_dry_run.ini
@@ -352,8 +352,8 @@ C_smooth=1.5;
 ; NOTE: Those parameters are used only in ACM and only if VPM::geometry=Insect
 ;-------------------------------------------------------------------------------
 ; Body geometry
-x_pivot_r=0.0 -1.354119e-01 0.0; (vector) position of right wing in body system
-x_pivot_l=0.0 1.354119e-01 0.0; (vector) position of left wing in body system
+x_pivot_r=0.05, -0.2165, 0.0; (vector) position of right wing in body system
+x_pivot_l=0.05, +0.2165, 0.0; (vector) position of left wing in body system
 ; Body (types: ellipsoid, drosophila, nobody, superSTL, sphere) if free sphere in geometry use sphere
 BodyType=jerry;
 ; if the body is a superSTL file, specify the filename here. Note: the geometry
