--- a/LIB/EQUATION/insects/wing_shape_example.ini
+++ b/LIB/EQUATION/insects/wing_shape_example.ini
@@ -45,6 +45,7 @@ bristles3D=no;
 ; note last entry is R and not D.
 bristles_coords=;
 
+; NOTE: prescribed wing deformation is untested work in progress! -TE 02/2026
 ; prescribed wing deformation set by the bounding box and wing deformation map in (y,x) coordinates
 ; if wing is deformable
 deformable=no;
