--- a/PARAMS_template_ACM.ini
+++ b/PARAMS_template_ACM.ini
@@ -277,7 +277,7 @@ tsave_stats=0.20;
 [Time-Statistics]
 ; do averaging or operations of some specific quantities over time
 time_statistics=0;
-; how many of those quantities? Increase number_eqn and adapt threshold_state_vector_component, optionally: set number_eqn_rhs
+; how many of those quantities? Increase number_eqn and adapt threshold_state_vector_component, optionally: set number_equations_rhs
 N_time_statistics=1;
 ; which quantities to take and what operation to do [QTY-OP]?
 ; quantities are:
