update INI file

--- a/PARAMS_template_ACM.ini
+++ b/PARAMS_template_ACM.ini
@@ -275,28 +275,34 @@ tsave_stats=0.20;
 
 
 [Time-Statistics]
-; do averaging or operations of some specific quantities over time
+; Use averaging or operations of some specific quantities over time?
+; Averaging is, in an adaptive simulation, expensive. The state vector is longer and we need to keep the averaged
+; quantities on the same grid as the state vector - the grid adaptation is thus also applied to the time averages. Hence the 
+; performance penalty.
 time_statistics=0;
 ; how many of those quantities? Increase number_eqn and adapt threshold_state_vector_component, optionally: set number_equations_rhs
-N_time_statistics=1;
+N_time_statistics=2;
 ; which quantities to take and what operation to do [QTY-OP]?
 ; quantities are:
-;    phiX for convdiff
-;    ux,uy,uz,p,umag,divu,vort,vorabs,dissipation, u[xyz]d[xyz], u[xyz]d[xyz]2, u[xyz]2
-; operators are int, avg/mean, var, minmax, var needs to be followed by avg/mean of the same quantity at any point
-; we can also compute covariances: uxuv-cov, uxuz-cov, uyuz-cov, uxp-cov, uyp-cov, uzp-cov
-; covariances need to be followed by the avg/mean of the two quantities involved and any point
+;    {phiX} for convdiff
+;    {ux, uy, uz, p, umag, divu, vort, vorabs, dissipation, u[xyz]d[xyz], u[xyz]d[xyz]2, u[xyz]2} in ACM / NSPP case
+; operators are [int, avg, var, minmax], var needs to be _followed_ by avg of the same quantity at any point. 
+; For example if you compute ux-var, then you have to compute ux-avg as well, and ux-avg needs to be placed after ux-var.
+; We can also compute covariances: uxuv-cov, uxuz-cov, uyuz-cov, uxp-cov, uyp-cov, uzp-cov
+; covariances need to be followed by the avg of the two quantities involved and any point
 ; example for var / cov: ux-var uy-var uxuy-cov p-avg ux-avg uy-avg, avg just needs to be there somewhere behind the variance/covariance
-time_statistics_names=ux-avg;
-; sometimes we want to restart simulations. In this case we want to read in the time_statistics
-; if this is set to 1, Physics::input_files has to include the time_statistics files as well
+time_statistics_names=ux-var ux-avg;
+; When restarting a simulation that uses averaging, we need to read in the time_statistics.
+; If this is set to 1, Physics::input_files has to include the time_statistics files as well.
+; When running the simulation until a certain time before starting to average, then, at the moment when we restart
+; with averaging turned on, we do not need to read from file.
 read_from_files_time_statistics=0;
-; set a start time from when averaging is done.
+; Set a start time for averaging.
 ; If it is before the read-in time, then it is for weighting the read-in values.
 ; If it is after the read-in time or 0.0, then the time_statistics accumulation start at that time.
-; However, it is advised that for adaptive simulations, the initial transient is computaded without time_statistics due to performance reasons.
+; To avoid the performance penalty in an adaptive simulation, it is advised to run the simulation wihout averaging until the time
+; when you want to start the averaging. 
 time_statistics_start_time=1.0;
-
 
 [ACM-new]
 ; speed of sound, used also for the CFL condition. The characteristic velocity is
