--- a/PARAMS_template_ACM.ini
+++ b/PARAMS_template_ACM.ini
@@ -264,6 +264,7 @@ input_files=rho_000000000141.h5 Ux_000000000141.h5 Uy_000000000141.h5 p_00000000
 ; how many fields are you going to save?
 N_fields_saved=6;
 ; how are the fields labeled?
+; When using averaging, don't forget to add those fields here as well.
 field_names=ux uy uz p mask scalar1;
 
 
@@ -290,7 +291,8 @@ N_time_statistics=2;
 ; For example if you compute ux-var, then you have to compute ux-avg as well, and ux-avg needs to be placed after ux-var.
 ; We can also compute covariances: uxuv-cov, uxuz-cov, uyuz-cov, uxp-cov, uyp-cov, uzp-cov
 ; covariances need to be followed by the avg of the two quantities involved and any point
-; example for var / cov: ux-var uy-var uxuy-cov p-avg ux-avg uy-avg, avg just needs to be there somewhere behind the variance/covariance
+; example for var / cov: ux-var uy-var uxuy-cov p-avg ux-avg uy-avg, avg just needs to be there somewhere behind the variance/covariance.
+; NOTE: you do have to add the time_statistics names to Saving::field_names (or you'll be computing averages without being able to use them).
 time_statistics_names=ux-var ux-avg;
 ; When restarting a simulation that uses averaging, we need to read in the time_statistics.
 ; If this is set to 1, Physics::input_files has to include the time_statistics files as well.
