Add special tools for dev: coarsening indicator "undo_refinement" and "origin", introduce REF_FRESHLY_REFINED status

--- a/PARAMS_template.ini
+++ b/PARAMS_template.ini
@@ -93,11 +93,14 @@ block_dist=sfc_hilbert;
 ;              wavelet coeffs are refined, however, he grid still has to be graded which in turn adds some blocks again.
 refinement_indicator=everywhere;
 ; coarsening indicator to be used in mesh adaptation (=coarsening) [threshold-state-vector, random, primary-variables]
-; threshold-state-vector: evaluates wavelet criterion on components of state vector. specify below which ones.
-; primary-variables: only available for NStokes: converts statevector to (rho,u,v,w,p) before thresholding
-; random: randomly coarse some blocks. used for testing. note we tag for coarsening only once in the first iteration
-; everywhere: coarsenes the entire grid by one level. note that this is strictly speaking, only guranteed to be possible
-; if the grid has been refined "everyhwere" before.
+; "threshold-state-vector": evaluates wavelet criterion on components of state vector. specify below which ones.
+; "primary-variables": only available for NStokes: converts statevector to (rho,u,v,w,p) before thresholding
+; "random": randomly coarse some blocks. used for testing. note we tag for coarsening only once in the first iteration
+; "everywhere": coarsenes the entire grid by one level. note that this is strictly speaking, only guranteed to be possible
+;               if the grid has been refined "everyhwere" before.
+; "undo_refinement": The inidicator "undo_refinement" does pretty much what it says: If the grid has previously been refined, newly created
+;               blocks have the status REF_FRESHLY_REFINED. Those blocks are coarsened again if "undo_refinement" is used. Useful
+;               for development. 
 coarsening_indicator=threshold-state-vector;
 ; sometimes, it can be useful to use a different indicator to generate the initial grid. For example, we can generate
 ; some non-equidistant grid for inicond, then use coarsening_indicator=everywhere
@@ -305,10 +308,17 @@ gamma_p=1;
 ; mean flow, is imposed as initial condition (if inicond=meanflow) and in the sponge
 ; layer as far-field BC (if this is used!)
 u_mean_set=0.0 0.0 0.0;
-; initial condition
+; initial condition. sets state vector values at t=0.
+; "meanflow" : sets u=u_mean_set and p=0 everywhere in the domain
+; "meanflow_channel" : [2D] a poisseuille profile with sinusoidal perturbations in ux,uy. Pressure zero.
+; "noise" : random number [0..+beta] for each component of the state vector. 
+; "noise2" : random number [-beta..+beta] for each component of the state vector. 
+; "noise_unique" : random number [-beta...+beta] for each component of the state vector. Reproducible - always yields same data on same grid
+; "lamballais" : [2D] the data are read from lamballais test case (=from file)
 inicond=meanflow;
+; initial condition free parameter (its meaning depends on inicond)
 ; if inicond= pressure-blob, this is the size of the blob.
-; if inicond=noise, this is the upper value for the noise (beta*rand(0..1))
+; if inicond=noise, this is the upper value for the noise
 beta=0.05;
 ; we can use passive scalars with the ACM. their parameters are specified in "ConvectionDiffusion" below
 ; but they need to be turned on here. Default is off.
